--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "gh-pages": "^3.2.3"
+  },
+  "scripts": {
+    "deploy": "gatsby build && gh-pages -d public -b gh-pages"
   }
 }
