--- a/package.json
+++ b/package.json
@@ -7,28 +7,21 @@
   "license": "0BSD",
   "starter-name": "gatsby-starter-portfolio-cara",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "develop:cypress": "cross-env CYPRESS_SUPPORT=y yarn develop",
-    "build:cypress": "cross-env CYPRESS_SUPPORT=y yarn build",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "deploy": "gatsby build && gh-pages -d public -b gh-pages"
   },
   "dependencies": {
-    "@lekoarts/gatsby-theme-cara": "^3.0.0",
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-gatsby-cloud": "^4.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
+    "@lekoarts/gatsby-theme-cara": "^1.2.20",
+    "@react-spring/parallax": "^9.3.0",
+    "gatsby": "^4.1.4",
+    "gatsby-plugin-gatsby-cloud": "^4.2.0-next.2",
+    "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.22",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "theme-ui": "^0.12.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "gh-pages": "^3.2.3"
-  },
-  "scripts": {
-    "deploy": "gatsby build && gh-pages -d public -b gh-pages"
   }
 }
